[package]
name = "core-rusty-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "rusty_lib"
]

[lib]
doctest = false

[dependencies]
rusty_lib = { path = "rusty_lib" }
actix = "0.13.0"
actix-web-actors = "4.1.0"
actix-web = "4"
actix-cors = "0.6.4"
actix-files = "0.6"
rand = "0.8.5"
jsonwebtoken = "8.2.0"
serde_json = "1.0.89"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.1.17", features = ["derive"] }
mongodb = "2.3.1"
log = "0.4"
env_logger = "0.9"
cron = "0.11.0"
chrono = "0.4.19"
futures-util = "0.3"
dotenv = "0.15.0"