[package]
name = "rusty_lib"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
actix-web = "4"
jsonwebtoken = "8.2.0"
flate2 = "1.0.25"
futures = "0.3"
log = "0.4"
chrono = "0.4.23"
mongodb = "2.3.0"
anyhow = "1.0"
oauth2 = "4.3.0"
url = "2.3.1"
serde_json = "1.0.89"
http = "0.2.8"
html2md = "0.2.14"
regex = "1.7.1"
base64 = "0.21.0"